Hoping to keep connection persistent

--- a/app.yaml
+++ b/app.yaml
@@ -6,3 +6,5 @@ automatic_scaling:
   max_idle_instances: automatic
   min_pending_latency: automatic
   max_pending_latency: automatic
+network:
+  session_affinity: true
