--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,7 @@
 runtime: nodejs
 env: flex
 instance_class: F1
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 1
+manual_scaling:
+  instances: 1
 network:
   session_affinity: true
